compiler/toc_analysis/src/const_eval/snapshots/toc_analysis__const_eval__test__error_real_overflow-10.snap
---
source: compiler/toc_analysis/src/const_eval/test.rs
expression: (-10.0) ** 309

---
InnerCtx {
    eval_infos: [
        EvalInfo { unit_id: UnitId(HirId(Idx::<HirNode>(6))), span: Span { file: None, range: 11..25 }, state: Error(ConstError { kind: RealOverflow, span: Span { file: None, range: 19..21 } }) },
    ],
    var_to_expr: {
        GlobalDefId(UnitId(HirId(Idx::<HirNode>(6))), DefId(0)): ConstExpr { id: 0 },
    },
}
ConstExpr { id: 0 } -> ConstError { kind: RealOverflow, span: Span { file: None, range: 19..21 } }

error at 19..21: real overflow in compile-time expression

