compiler/toc_analysis/src/const_eval/snapshots/toc_analysis__const_eval__test__error_real_overflow-3.snap
---
source: compiler/toc_analysis/src/const_eval/test.rs
expression: 1e308 - (-1e308)

---
InnerCtx {
    eval_infos: [
        EvalInfo { unit_id: UnitId(HirId(Idx::<HirNode>(6))), span: Span { file: None, range: 11..27 }, state: Error(ConstError { kind: RealOverflow, span: Span { file: None, range: 17..18 } }) },
    ],
    var_to_expr: {
        GlobalDefId(UnitId(HirId(Idx::<HirNode>(6))), DefId(0)): ConstExpr { id: 0 },
    },
}
ConstExpr { id: 0 } -> ConstError { kind: RealOverflow, span: Span { file: None, range: 17..18 } }

error at 17..18: real overflow in compile-time expression

