compiler/toc_analysis/src/const_eval/snapshots/toc_analysis__const_eval__test__restrict_assign_type-7.snap
---
source: compiler/toc_analysis/src/const_eval/test.rs
expression: "const a : real := false"

---
InnerCtx {
    eval_infos: [
        EvalInfo { unit_id: UnitId(HirId(Idx::<HirNode>(3))), span: Span { file: None, range: 18..23 }, state: Error(ConstError { kind: WrongResultType(Bool(false), Real), span: Span { file: None, range: 18..23 } }) },
    ],
    var_to_expr: {
        GlobalDefId(UnitId(HirId(Idx::<HirNode>(3))), DefId(0)): ConstExpr { id: 0 },
    },
}
ConstExpr { id: 0 } -> ConstError { kind: WrongResultType(Bool(false), Real), span: Span { file: None, range: 18..23 } }

error at 18..23: wrong type for compile-time expression
| note for 18..23: expected real value, found boolean value

