compiler/toc_analysis/src/const_eval/snapshots/toc_analysis__const_eval__test__unsupported_values.snap
---
source: compiler/toc_analysis/src/const_eval/test.rs
expression: "const a := \"alphabet\""

---
ConstEvalCtx {
    inner: RwLock {
        data: InnerCtx {
            eval_infos: [
                EvalInfo { unit_id: UnitId(0), span: 11..21, state: Error(ConstError { kind: UnsupportedValue, span: 11..21 }) },
            ],
            var_to_expr: {
                GlobalDefId(UnitId(0), DefId(0)): ConstExpr { id: 0 },
            },
        },
    },
}
ConstExpr { id: 0 } -> ConstError { kind: UnsupportedValue, span: 11..21 }

error at 11..21: literal is currently not implemented for compile-time evaluation

